Fixed antiforgery token problem. Improved CSS

--- a/JobBoard.UI.MVC/Views/Account/Login.cshtml
+++ b/JobBoard.UI.MVC/Views/Account/Login.cshtml
@@ -14,6 +14,7 @@
                
                 <div class="login-form-rec">
                     <form action="#" method="post">
+                        @Html.AntiForgeryToken()
                         <input type="email" name="email" placeholder="E-mail" required="">
                         <input type="password" name="password" placeholder="Password" required="">
                         <div class="tp">
