--- a/JobBoard.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/JobBoard.UI.MVC/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href="//fonts.googleapis.com/css?family=Work+Sans:200,300,400,500,600,700" rel="stylesheet">
     <link href='//fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,900,900italic,700italic'
           rel='stylesheet' type='text/css'>
+    <link href="~/_Archive/css/CustomCSS.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -55,14 +56,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <nav class="link-effect-2" id="link-effect-2">
                             <ul class="nav navbar-nav">
-                                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                                <li>@Html.ActionLink("Jobs", "Index", "OpenPositions")</li>
-                                <li>@Html.ActionLink("Contact HQ", "Contact", "Home")</li>
-                                <li>@Html.ActionLink("Applications", "Index", "Applications")</li>
-                                <li>@Html.ActionLink("Locations", "Index", "Locations")</li>
-                                @Html.Partial("_LoginPartial")
+                                <li class="effect-3">@Html.ActionLink("Home", "Index", "Home")</li>
+                                <li class="effect-3">@Html.ActionLink("Jobs", "Index", "OpenPositions")</li>
+                                <li class="effect-3">@Html.ActionLink("Contact HQ", "Contact", "Home")</li>
+                                <li class="effect-3">@Html.ActionLink("Applications", "Index", "Applications")</li>
+                                <li class="effect-3">@Html.ActionLink("Locations", "Index", "Locations")</li>
+                                <li class="effect-3">@Html.ActionLink("Users", "Index", "UsersAdmin")</li>
+                                <li class="effect-3">@Html.ActionLink("Roles", "Index", "RolesAdmin")</li>
+                                 @Html.Partial("_LoginPartial")
                             </ul>
-                          
+                           
                         </nav>
                     </div>
                     <!--/.navbar-collapse-->
@@ -87,63 +90,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- footer -->
     <div class="footer_top_agileits">
         <div class="container">
-            <div class="col-md-4 footer_grid">
-                <h3>About Us</h3>
-                <p>
-                    Nam libero tempore cum vulputate id est id, pretium semper enim. Morbi viverra congue nisi vel pulvinar posuere sapien
-                    eros.
-                </p>
-            </div>
-            <div class="col-md-4 footer_grid">
-                <h3>Latest News</h3>
-                <ul class="footer_grid_list">
-                    <li>
-                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                        <a href="single.html">Lorem ipsum neque vulputate </a>
-                    </li>
-                    <li>
-                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                        <a href="single.html">Dolor amet sed quam vitae</a>
-                    </li>
-                    <li>
-                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                        <a href="single.html">Lorem ipsum neque, vulputate </a>
-                    </li>
-                    <li>
-                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                        <a href="single.html">Dolor amet sed quam vitae</a>
-                    </li>
-                    <li>
-                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                        <a href="single.html">Lorem ipsum neque, vulputate </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-md-4 footer_grid">
-                <h3>Contact Info</h3>
-                <ul class="address">
-                    <li><i class="fa fa-map-marker" aria-hidden="true"></i>8088 USA, Honey block, <span>New York City.</span></li>
-                    <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li><i class="fa fa-phone" aria-hidden="true"></i>+09187 8088 9436</li>
-                </ul>
-            </div>
-            <div class="clearfix"> </div>
-            <div class="footer_grids">
-                <div class="col-md-4 footer_grid_left">
-                    <h3>Sign up for our Newsletter</h3>
-                </div>
-                <div class="col-md-8 footer_grid_right">
-
-                    <form action="#" method="post">
-                        <input type="email" name="Email" placeholder="Enter Email Address..." required="">
-                        <input type="submit" value="Submit">
-                    </form>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
+            
+            @RenderSection("scripts", required: false)
+            
+           
+            
         </div>
     </div>
-    <div class="footer_w3ls">
+    <div class="footer_w3ls padding">
         <div class="container">
             <div class="footer_bottom">
                 <div class="col-md-9 footer_bottom_grid">
