--- a/JobBoard.UI.MVC/Views/OpenPositions/Details.cshtml
+++ b/JobBoard.UI.MVC/Views/OpenPositions/Details.cshtml
@@ -25,7 +25,24 @@
         <dd>
             @Html.DisplayFor(model => model.Position.Title)
         </dd>
-
+        <dt>
+            @Html.DisplayNameFor(model => model.Location.City)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Location.City)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Location.State)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Location.State)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Position.JobDescription)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Position.JobDescription)
+        </dd>
     </dl>
 </div>
 <p>
