--- a/JobBoard.UI.MVC/Views/OpenPositions/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/OpenPositions/Index.cshtml
@@ -17,6 +17,12 @@
         <th>
             @Html.DisplayNameFor(model => model.Position.Title)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Location.City)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Location.State)
+        </th>
         <th></th>
     </tr>
 
@@ -29,9 +35,16 @@
             @Html.DisplayFor(modelItem => item.Position.Title)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.Location.City)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Location.State)
+        </td>
+        <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.OpenPositionID }) |
             @Html.ActionLink("Details", "Details", new { id=item.OpenPositionID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.OpenPositionID })
+            @Html.ActionLink("Delete", "Delete", new { id=item.OpenPositionID }) |
+            @Html.ActionLink("Apply", "Apply", new { id = item.OpenPositionID })
         </td>
     </tr>
 }
