--- a/JobBoard.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/JobBoard.UI.MVC/Views/Shared/_Layout.cshtml
@@ -36,100 +36,100 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 
 <body>
-    <!-- header -->
-    <div class="header" id="home">
-        <div class="content white agile-info">
-            <nav class="navbar navbar-default" role="navigation">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="index.html">
-                            <h1><span class="fa fa-signal" aria-hidden="true"></span> Soft <label>Hr Agency</label></h1>
-                        </a>
-                    </div>
-                    <!--/.navbar-header-->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <nav class="link-effect-2" id="link-effect-2">
-                            <ul class="nav navbar-nav">
-                                <li class="effect-3">@Html.ActionLink("Home", "Index", "Home")</li>
-                                <li class="effect-3">@Html.ActionLink("Jobs", "Index", "OpenPositions")</li>
-                                <li class="effect-3">@Html.ActionLink("Contact HQ", "Contact", "Home")</li>
-                                <li class="effect-3">@Html.ActionLink("Applications", "Index", "Applications")</li>
-                                <li class="effect-3">@Html.ActionLink("Locations", "Index", "Locations")</li>
-                                <li class="effect-3">@Html.ActionLink("Users", "Index", "UsersAdmin")</li>
-                                <li class="effect-3">@Html.ActionLink("Roles", "Index", "RolesAdmin")</li>
-                                 @Html.Partial("_LoginPartial")
-                            </ul>
-                           
-                        </nav>
-                    </div>
-                    <!--/.navbar-collapse-->
-                    <!--/.navbar-->
-                </div>
-            </nav>
-        </div>
-    </div>
-    <!-- banner -->
-    
-    <!--//banner -->
-    <!--/search_form -->
-    <!--//search_form -->
-    <!-- //banner-bottom -->
-    <!-- services -->
-    <!-- //services -->
-    <!-- /mid-services -->
-    <!-- //mid-services -->
-    <!-- //testimonials -->
-    @RenderBody()
+        <!-- header -->
+        <div class="header" id="home">
+            <div class="content white agile-info">
+                <nav class="navbar navbar-default" role="navigation">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="index.html">
+                                <h1><span class="fa fa-signal" aria-hidden="true"></span> Soft <label>Hr Agency</label></h1>
+                            </a>
+                        </div>
+                        <!--/.navbar-header-->
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <nav class="link-effect-2" id="link-effect-2">
+                                <ul class="nav navbar-nav">
+                                    <li class="effect-3">@Html.ActionLink("Home", "Index", "Home")</li>
+                                    <li class="effect-3">@Html.ActionLink("Jobs", "Index", "OpenPositions")</li>
+                                    <li class="effect-3">@Html.ActionLink("Contact HQ", "Contact", "Home")</li>
+                                    <li class="effect-3">@Html.ActionLink("Applications", "Index", "Applications")</li>
+                                    <li class="effect-3">@Html.ActionLink("Locations", "Index", "Locations")</li>
+                                    <li class="effect-3">@Html.ActionLink("Users", "Index", "UsersAdmin")</li>
+                                    <li class="effect-3">@Html.ActionLink("Roles", "Index", "RolesAdmin")</li>
+                                    @Html.Partial("_LoginPartial")
+                                </ul>
 
-    <!-- footer -->
-    <div class="footer_top_agileits">
-        <div class="container">
-            
-            @RenderSection("scripts", required: false)
-            
-           
-            
-        </div>
-    </div>
-    <div class="footer_w3ls padding">
-        <div class="container">
-            <div class="footer_bottom">
-                <div class="col-md-9 footer_bottom_grid">
-                    <div class="footer_bottom1">
-                        <a href="index.html">
-                            <h2><span class="fa fa-signal" aria-hidden="true"></span> Soft <label>Hr Agency</label></h2>
-                        </a>
-                        <p>© 2017 Soft. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+                            </nav>
+                        </div>
+                        <!--/.navbar-collapse-->
+                        <!--/.navbar-->
                     </div>
-                </div>
-                <div class="col-md-3 footer_bottom_grid">
-                    <h6>Follow Us</h6>
-                    <div class="social">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="clearfix"> </div>
+                </nav>
             </div>
-
         </div>
-    </div>
-    <!-- //footer -->
+        <!-- banner -->
+        <!--//banner -->
+        <!--/search_form -->
+        <!--//search_form -->
+        <!-- //banner-bottom -->
+        <!-- services -->
+        <!-- //services -->
+        <!-- /mid-services -->
+        <!-- //mid-services -->
+        <!-- //testimonials -->
+        @RenderBody()
 
-    <a href="#home" class="scroll" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-    <!-- js -->
-    <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+        <!-- footer -->
+        <div class="footer_top_agileits">
+            <div class="container">
 
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+                @RenderSection("scripts", required: false)
+
+
+
+            </div>
+        </div>
+        <div class="footer_w3ls padding">
+            <div class="container">
+                <div class="footer_bottom">
+                    <div class="col-md-9 footer_bottom_grid">
+                        <div class="footer_bottom1">
+                            <a href="index.html">
+                                <h2><span class="fa fa-signal" aria-hidden="true"></span> Soft <label>Hr Agency</label></h2>
+                            </a>
+                            <p>© 2017 Soft. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 footer_bottom_grid">
+                        <h6>Follow Us</h6>
+                        <div class="social">
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+
+            </div>
+        </div>
+        <!-- //footer -->
+
+        <a href="#home" class="scroll" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+        <!-- js -->
+        <script type="text/javascript" src="~/Content/js/jquery-2.1.4.min.js"></script>
+
+        <script type="text/javascript" src="~/Content/js/bootstrap.js"></script>
+    
 </body>
 
 </html>
