--- a/JobBoard.UI.MVC/Views/Home/Contact.cshtml
+++ b/JobBoard.UI.MVC/Views/Home/Contact.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model JobBoard.UI.MVC.Models.ContactViewModel
+@{
     ViewBag.Title = "Contact";
 }
 
@@ -50,20 +51,21 @@
             </div>
             <div class="clearfix"> </div>
             <div class="w3layouts_mail_grid">
-                <form action="#" method="post">
+                @using (Html.BeginForm())
+                {
                     <div class="col-md-6 wthree_contact_left_grid">
-                        <input type="text" name="Name" placeholder="Name" required="">
-                        <input type="email" name="Email" placeholder="Email" required="">
-                        <input type="text" name="Telephone" placeholder="Telephone" required="">
-                        <input type="text" name="Subject" placeholder="Subject" required="">
+                        @Html.AntiForgeryToken()
+                        @Html.TextBoxFor(contact => contact.Name, new { @placeholder = "Name" })<br />
+                        @Html.TextBoxFor(contact => contact.Email, new { @placeholder = "Email" })
+                        @Html.TextBoxFor(contact => contact.Phone, new { @placeholder = "Phone" })<br />
+                        @Html.TextBoxFor(contact => contact.Subject, new { @placeholder = "Subject" })<br />
                     </div>
                     <div class="col-md-6 wthree_contact_left_grid">
-                        <textarea name="Message" placeholder="Message..." required=""></textarea>
+                        @Html.TextAreaFor(contact => contact.Message, new { @placeholder = "Message..." })<br />
                         <input type="submit" value="Submit">
                     </div>
                     <div class="clearfix"> </div>
-
-                </form>
+                }
             </div>
 
 
