locked down controller, views, buttons

--- a/JobBoard.UI.MVC/Views/Positions/Details.cshtml
+++ b/JobBoard.UI.MVC/Views/Positions/Details.cshtml
@@ -29,6 +29,10 @@
     </dl>
 </div>
 <p>
+    @if (User.IsInRole("Manager") || User.IsInRole("Admin")
+    {
     @Html.ActionLink("Edit", "Edit", new { id = Model.PositionID }) |
+    }
+
     @Html.ActionLink("Back to List", "Index")
 </p>
