--- a/JobBoard.UI.MVC/Views/Applications/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Applications/Index.cshtml
@@ -4,11 +4,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Applications</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -53,9 +50,14 @@
             @Html.DisplayFor(modelItem => item.OpenPosition.OpenPositionID)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ApplicationID }) |
+            @if (User.IsInRole("Admin") || User.IsInRole("Manager")
+            {
+            @Html.ActionLink("Edit", "Edit", new { id = item.ApplicationID }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.ApplicationID })
+            }
+           
             @Html.ActionLink("Details", "Details", new { id=item.ApplicationID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ApplicationID })
+           
         </td>
     </tr>
 }
