--- a/JobBoard.UI.MVC/Views/Home/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Home/Index.cshtml
@@ -5,25 +5,25 @@
 
 <div class="banner-bottom">
     <div class="container">
-        <div class="tittle_head_w3ls">
-            <h3 class="tittle">About Us</h3>
+        @*<div class="tittle_head_w3ls">
+            <h3 class="tittle">Hole Foods Job Board</h3>
+        </div>*@
+        <div class="inner_page_agile">
+            <h3>Hole Foods Job Board</h3>
         </div>
         <div class="inner_sec_grids_info_w3ls">
             <div class="col-md-6 banner_bottom_left">
-                <h4>Employment opportunities for <span>Professionals</span></h4>
+                
                 <p>
-                    Pellentesque convallis diam consequat magna vulputate malesuada. Cras a ornare elit. Nulla viverra pharetra sem, eget
-                    pulvinar neque pharetra ac.
+                    This application is for Hole Foods employees to view and apply for open positions within the company. Upon registration, you will provide a resume` which will be made available to the appropriate hiring manager with a single click. If you have any questions feel free to contact Hole Foods headquarters through the application.
                 </p>
-                <p>
-                    Lorem Ipsum convallis diam consequat magna vulputate malesuada. Cras a ornare elit. Nulla viverra pharetra sem, eget
-                    pulvinar neque pharetra ac.
-                </p>
-                @*<div class="clearfix"> </div>*@
+            
             </div>
             <div class="col-md-6 banner_bottom_right">
                 <div class="agileits_w3layouts_banner_bottom_grid">
-                    <img src="~/Content/images/ab.png" alt=" " class="img-responsive" />
+
+                    
+
                 </div>
             </div>
             @*<div class="clearfix"> </div>*@
