--- a/JobBoard.UI.MVC/Views/Positions/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Positions/Index.cshtml
@@ -7,7 +7,11 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @if (User.IsInRole("Manager") || User.IsInRole("Admin"))
+    {
+        @Html.ActionLink("Create New", "Create")
+    }
+
 </p>
 <table class="table">
     <tr>
@@ -20,20 +24,26 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.JobDescription)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PositionID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.PositionID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PositionID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.JobDescription)
+            </td>
+            <td>
+                @if (User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Edit", "Edit", new { id = item.PositionID }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.PositionID })
+                }
+
+                @Html.ActionLink("Details", "Details", new { id = item.PositionID }) |
+
+            </td>
+        </tr>
+                }
 
 </table>
