Edited the Open Positions create view and home page.

--- a/JobBoard.UI.MVC/Views/Positions/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Positions/Index.cshtml
@@ -36,7 +36,7 @@
             <td>
                 @if (User.IsInRole("Admin"))
                 {
-                    @Html.ActionLink("Edit", "Edit", new { id = item.PositionID }) |
+                    @Html.ActionLink("Edit", "Edit", "Positions", new { id = item.PositionID }) 
             @Html.ActionLink("Delete", "Delete", new { id = item.PositionID })
                 }
 
