--- a/JobBoard.UI.MVC/Views/Account/Register.cshtml
+++ b/JobBoard.UI.MVC/Views/Account/Register.cshtml
@@ -3,7 +3,6 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
 
 <div class="inner_content_info_agileits">
     <div class="container">
@@ -17,38 +16,44 @@
                     {
                         @Html.AntiForgeryToken()
                         <div>
-                            @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
+                            @Html.LabelFor(m => m.FirstName, new { @class = "col-md-3 control-label text-left" })
                             @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
                         </div>
 
                         <div>
-                            @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
+                            @Html.LabelFor(m => m.LastName, new { @class = "col-md-3 control-label text-left" })
 
                             @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
                         </div>
                         <div>
-                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                            @Html.LabelFor(m => m.Email, new { @class = "col-md-3 control-label text-left" })
 
                             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         </div>
                         <div>
-                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                            @Html.LabelFor(m => m.Password, new { @class = "col-md-3 control-label text-left" })
 
                             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         </div>
                         <div>
-                            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+                            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-5 control-label text-left" })
 
                             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
                         </div>
 
                         <div>
-                            @Html.LabelFor(model => model.ResumeFile, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div @*class="col-md-10"*@>
-                                <input type="file" name="resumeFile" />
-                            </div>
-                        </div>
+                            @Html.LabelFor(model => model.ResumeFile, htmlAttributes: new { @class = "control-label col-md-6 text-left" })
 
+                        </div>
+                        @*<div class="form-inputs upload">
+                            <p>Upload your resume</p>
+                            <input type="file" id="fileselect" name="resumeFile" multiple="multiple" />
+                            
+                        </div>*@
+                        <div>
+                                <input type="file" name="resumeFile"/>
+                            <div id="filedrag">Upload</div>
+                            </div>
                         <input type="submit" value="Register">
                     }
                 </div>
