--- a/JobBoard.UI.MVC/Views/Home/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/Home/Index.cshtml
@@ -9,19 +9,19 @@
             <h3 class="tittle">Hole Foods Job Board</h3>
         </div>*@
         <div class="inner_page_agile">
-            <h3>Hole Foods Job Board</h3>
+            <h3>Dunder Mifflin Job Board</h3>
         </div>
         <div class="inner_sec_grids_info_w3ls">
             <div class="col-md-6 banner_bottom_left">
                 
                 <p>
-                    This application is for Hole Foods employees to view and apply for open positions within the company. Upon registration, you will provide a resume` which will be made available to the appropriate hiring manager with a single click. If you have any questions feel free to contact Hole Foods headquarters through the application.
+                    This application is for Dunder Mifflin employees to view and apply for open positions within the company. Upon registration, you will provide a resume` which will be made available to the appropriate hiring manager with a single click. If you have any questions feel free to contact Dunder Mifflin headquarters through the application.
                 </p>
             
             </div>
             <div class="col-md-6 banner_bottom_right">
                 <div class="agileits_w3layouts_banner_bottom_grid">
-
+                    <img src="~/Content/images/211950726182631923_0i3CiR1n_f.jpg" style="margin-bottom: 2em"/>
                     
 
                 </div>
