--- a/JobBoard.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/JobBoard.UI.MVC/Views/Shared/_Layout.cshtml
@@ -51,8 +51,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html">
-                            <h1><span class="fa fa-signal" aria-hidden="true"></span> Soft <label>Hr Agency</label></h1>
+                        <a class="navbar-brand" style="margin-bottom:4em; margin-top:-1em" href="index.cshtml">
+                            @*<h1><span class="fa fa-signal" aria-hidden="true"></span> Soft <label>Hr Agency</label></h1>*@
+
+                            <img src="~/Content/images/dunder_mifflin_paper_company_inc__by_obeyshi-d4okpdj.png" />
                         </a>
                     </div>
                     <!--/.navbar-header-->
@@ -107,7 +109,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-9 footer_bottom_grid">
                     <div class="footer_bottom1">
                         <a href="index.html">
-                            <h2><span class="fa fa-signal" aria-hidden="true"></span> Soft <label>Hr Agency</label></h2>
+                            <img src="~/Content/images/dunder_mifflin_paper_company_inc__by_obeyshi-d4okpdj.png" />
                         </a>
                         <p>© 2017 Soft. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
                     </div>
