--- a/JobBoard.UI.MVC/Views/OpenPositions/Index.cshtml
+++ b/JobBoard.UI.MVC/Views/OpenPositions/Index.cshtml
@@ -47,7 +47,7 @@
 <p>
    @if (User.IsInRole("Manager") || User.IsInRole("Admin"))
    {
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Open Position", "Create")
    }
 </p>
 
